--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "keston-antonio-schmidtgen-personal-website",
+  "name": "keston-antonio-schmidtgen.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
